Ensure that widget settings are never clipped

--- a/src/styles/_widget.scss
+++ b/src/styles/_widget.scss
@@ -18,6 +18,10 @@
   a {
     color: #fff;
   }
+  // Ensure that widget settings are never clipped by a manually-set height
+  &.widget-settings-open {
+    height: auto !important;
+  }
 }
 
 .widget-header {
